AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/ingress/components/sas-text-concepts/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /conceptExecutionProvider/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concept-execution-provider
    sas.com/admin: namespace
  name: sas-concept-execution-provider
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-concept-execution-provider
          servicePort: 80
        path: /conceptExecutionProvider

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /conceptTaxonomy/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concept-taxonomy
    sas.com/admin: namespace
  name: sas-concept-taxonomy
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-concept-taxonomy
          servicePort: 80
        path: /conceptTaxonomy

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /concepts/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concepts
    sas.com/admin: namespace
  name: sas-concepts
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-concepts
          servicePort: 80
        path: /concepts
